Dodanie paginacji, wyszukiwania i sortowania do książek
